working on portfolio

--- a/index.html
+++ b/index.html
@@ -33,15 +33,43 @@
           </p>
         </div>
         <div class="social-media">
-          <a href="https://www.facebook.com/profile.php?id=100092318334788" class="fb-profile"><i class="fa-brands fa-facebook"></i></a>
-        <a href="https://www.instagram.com/its_bipin12/?next=%2F" class="insta-profile"><i class="fa-brands fa-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/bipin-sainju-shrestha-9657b22b7/" class="linkedin-profile"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="https://github.com/bipin24746" class="github-profile"><i class="fa-brands fa-github"></i></a>
-        
+          <a
+            href="https://www.facebook.com/profile.php?id=100092318334788"
+            class="fb-profile"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+          <a
+            href="https://www.instagram.com/its_bipin12/?next=%2F"
+            class="insta-profile"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/bipin-sainju-shrestha-9657b22b7/"
+            class="linkedin-profile"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+          <a href="https://github.com/bipin24746" class="github-profile"
+            ><i class="fa-brands fa-github"></i
+          ></a>
         </div>
       </div>
       <div>
         <img src="assets/bipin.webp" alt="" class="home-image" />
+      </div>
+    </div>
+    <!--homepage end-->
+    <!--About-->
+    <div>
+      <h1 class="about-me">About Me</h1>
+      <div class="aboutme-container">
+        <img src="assets/bipin1.webp" alt="" class="about-image" />
+        <p class="about-paragraph">
+          <span class="about-freelancer">A Freelancer</span> <br />My name is
+          Bipin Sainju Shrestha. <br />
+          And i am currently Pursuing my bachelor degree in <br />BCA(Bachelor
+          in Computer Application). <br />
+          I am currently learning about Web Technology.
+        </p>
       </div>
     </div>
   </body>
